# CeleoWAF

./: .gitignore  .gitmodules  CHANGES  Makefile.am  README.md  SECURITY.md  celeowaf.conf-recommended  celeowaf.pc.in  configure.ac
.github/ISSUE_TEMPLATE/: bug-report-for-version-2-x.md  bug-report-for-version-3-x.md
.github/workflows/: ci.yml  main.yml
doc/: doxygen.cfg
examples/multiprocess_c/: Makefile.am  multi.c
examples/reading_logs_via_rule_message/: Makefile.am  reading_logs_via_rule_message.h  simple_request.cc
examples/reading_logs_with_offset/: Makefile.am  read.cc
examples/simple_example_using_c/: Makefile.am  basic_rules.conf  test.c
examples/using_bodies_in_chunks/: Makefile.am  simple_request.cc
headers/celeowaf/: anchored_set_variable.h  anchored_set_variable_translation_proxy.h  anchored_variable.h  audit_log.h  celeowaf.h  debug_log.h  intervention.h  rule.h  rule_marker.h  rule_message.h  rule_unconditional.h  rule_with_actions.h  rule_with_operator.h  rules.h  rules_set.h  (+7 more)
src/: Makefile.am  anchored_set_variable.cc  anchored_variable.cc  celeowaf.cc  debug_log_writer_agent.h  rule.cc  rule_message.cc  rule_script.cc  rule_script.h  rule_unconditional.cc  rule_with_actions.cc  rule_with_operator.cc  rules_exceptions.cc  rules_set.cc  rules_set_phases.cc  rules_set_properties.cc  run_time_string.cc  run_time_string.h  transaction.cc  unique_id.cc  unique_id.h
test/: Makefile.am  coding_style_suppressions.txt  cppcheck_suppressions.txt  custom-test-driver  valgrind_suppressions.txt
tools/rules-check/: Makefile.am  rules-check.cc
(+494 files in other folders)
